--- a/app/src/main/res/layout/draver_header.xml
+++ b/app/src/main/res/layout/draver_header.xml
@@ -4,9 +4,7 @@
     android:id="@+id/navHeader"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="?attr/colorPrimaryDark"
-    android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/navHeaderImage"
@@ -19,6 +17,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_person_24" />
+        android:background="?attr/logo_run" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
