--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -2,9 +2,8 @@
 <resources>
     <attr name="logo_run" format="reference"/>
     <attr name="congrats_pic" format="reference"/>
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
 
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/secondaryLightColorLight</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -12,8 +11,6 @@
     </style>
 
 
-    <!-- The default font for RecyclerView items is too small.
-    The margin is a simple delimiter between the words. -->
     <style name="training_title">
         <item name="android:paddingLeft">8dp</item>
         <item name="android:background">@color/colorPrimary</item>
@@ -27,18 +24,18 @@
     </style>
 
     <style name="Theme.Training_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+
         <item name="logo_run">@drawable/run_dark</item>
         <item name="congrats_pic">@drawable/cong2</item>
         <item name="colorPrimary">@color/secondaryColorLight</item>
         <item name="colorPrimaryVariant">@color/secondaryLightColorLight</item>
         <item name="colorOnPrimary">@color/primaryColorLight</item>
-        <!-- Secondary brand color. -->
+
         <item name="colorSecondary">@color/secondaryDarkColorLight</item>
         <item name="colorSecondaryVariant">@color/primaryLightColorLight</item>
         <item name="colorOnSecondary">@color/secondaryLightColorLight</item>
-        <!-- Status bar color. -->
+
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
