--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -24,6 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@string/running_training_button"
+            android:background="@drawable/running_train"
             app:layout_constraintBottom_toTopOf="@+id/start_athome_training_button"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -34,6 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@string/at_home_training_button"
+            android:background="@drawable/aerobic_training"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
