--- a/app/src/main/res/layout/fragment_create_reminder.xml
+++ b/app/src/main/res/layout/fragment_create_reminder.xml
@@ -82,12 +82,23 @@
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/back_button"
             app:layout_constraintTop_toBottomOf="@+id/date_text_view"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             android:text="@string/create_notification"
             android:layout_marginBottom="@dimen/big_margin"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/back_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/create_notification_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
