--- a/app/src/main/res/layout/draver_header.xml
+++ b/app/src/main/res/layout/draver_header.xml
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/logo_run" />
+        android:background="?attr/logo_run"
+        android:contentDescription="@string/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
