--- a/app/src/main/res/layout/fragment_at_home_training.xml
+++ b/app/src/main/res/layout/fragment_at_home_training.xml
@@ -1,4 +1,4 @@
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -42,36 +42,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{atHomeTrainingViewModel.exerciseText}"
+                android:textSize="@dimen/normal_text_size"
                 app:layout_constraintBottom_toTopOf="@+id/number_of_exercises_display"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
                 app:layout_constraintTop_toBottomOf="@+id/picture_of_exercise" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/repeats_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/repeats"
+            android:textSize="@dimen/normal_text_size"
+            app:layout_constraintBottom_toTopOf="@+id/number_of_exercises_display"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/time_display" />
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/number_of_exercises_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/normal_text_size"
                 android:text="@{atHomeTrainingViewModel.exerciseRepeats}"
                 app:layout_constraintBottom_toTopOf="@+id/next_exercise"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
-                app:layout_constraintTop_toBottomOf="@+id/time_display" />
-
-<!--            <com.google.android.material.textview.MaterialTextView-->
-<!--                android:id="@+id/calories_display"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="0 kcal"-->
-<!--                app:layout_constraintBottom_toTopOf="@+id/next_exercise"-->
-<!--                app:layout_constraintEnd_toStartOf="@+id/guideline_right"-->
-<!--                app:layout_constraintStart_toEndOf="@+id/number_of_exercises_display"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/time_display" />-->
+                app:layout_constraintTop_toBottomOf="@+id/repeats_text" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/next_exercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Next"
+                android:text="@string/next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left" />
