--- a/app/src/main/res/layout/fragment_create_reminder.xml
+++ b/app/src/main/res/layout/fragment_create_reminder.xml
@@ -1,4 +1,4 @@
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_marginBottom="136dp"
-            android:hint="01.01.2021"
+            android:hint="@string/default_date"
             app:layout_constraintBottom_toTopOf="@+id/create_notification_button"
             app:layout_constraintEnd_toStartOf="@+id/pick_date_button"
             app:layout_constraintHorizontal_bias="1.0"
