--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="big_padding">16dp</dimen>
-    <dimen name="normal_margin" />
+    <dimen name="normal_margin">24dp</dimen>
     <dimen name="big_margin">32dp</dimen>
     <dimen name="small_margin">16dp</dimen>
+    <dimen name="normal_text_size">24sp</dimen>
 </resources>
