--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -79,8 +79,10 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/bmi_value"
             android:layout_width="match_parent"
-            android:layout_margin="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/small_margin"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="@dimen/normal_text_size"
             android:text="" />
 
         </LinearLayout>
