--- a/app/src/main/res/layout/fragment_modify_account.xml
+++ b/app/src/main/res/layout/fragment_modify_account.xml
@@ -42,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/hint_change_height"
-            app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout"
+            app:layout_constraintBottom_toTopOf="@+id/birthday_text_input_layout"
             app:layout_constraintTop_toBottomOf="@+id/weight_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right">
@@ -55,10 +55,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/username_text_input_layout"
+            android:id="@+id/birthday_text_input_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_change_username"
+            android:hint="@string/change_birthday"
             app:layout_constraintBottom_toTopOf="@+id/sex_text_input_layout"
             app:layout_constraintTop_toBottomOf="@+id/height_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -75,8 +75,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/new_password_text_input_layout"
-            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
+            app:layout_constraintBottom_toTopOf="@+id/register_button"
+            app:layout_constraintTop_toBottomOf="@+id/birthday_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right">
 
@@ -85,52 +85,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
-                android:hint="@string/label_sex"
+                android:hint="@string/change_sex"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/new_password_text_input_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_new_password"
-            app:layout_constraintBottom_toTopOf="@+id/old_password_text_input_layout"
-            app:layout_constraintTop_toBottomOf="@+id/sex_text_input_layout"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
-            app:errorEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/new_password_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/old_password_text_input_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_old_password"
-            app:layout_constraintBottom_toTopOf="@+id/register_button"
-            app:layout_constraintTop_toBottomOf="@+id/new_password_text_input_layout"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_right">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/old_password_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/register_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/back_button"
-            app:layout_constraintTop_toBottomOf="@+id/old_password_text_input_layout"
+            app:layout_constraintTop_toBottomOf="@+id/sex_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             android:text="@string/button_update" />
