--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -80,7 +80,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/hint_height"
-            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
+            app:layout_constraintBottom_toTopOf="@+id/birthday_text_input_layout"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/weight_text_input_layout">
@@ -93,6 +93,27 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/birthday_text_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_birthday"
+            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/height_text_input_layout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/birthday_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:inputType="numberDecimal" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password_text_input_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -101,7 +122,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/register_button"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintTop_toBottomOf="@+id/height_text_input_layout">
+            app:layout_constraintTop_toBottomOf="@+id/birthday_text_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_input"
