--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -13,4 +13,9 @@
         android:icon="@drawable/baseline_notifications_24"
         android:title="@string/create_reminder"
         />
+
+    <item
+        android:id="@+id/loginFragment"
+        android:icon="@drawable/baseline_logout_24"
+        android:title="@string/logout" />
 </menu>
