--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout">
 
             <AutoCompleteTextView
-                android:id="@+id/sex_auto"
+                android:id="@+id/sex_auto_complete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
@@ -109,8 +109,7 @@
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="numberDecimal" />
+                android:focusableInTouchMode="false" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
